force-app/main/default/objects/Lead/fields/Cold_Lead_List__c.field-meta.xml
<CustomField>
    <fullName>Cold_Lead_List__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check it if you want this lead to be sent a Marketing Followup Email</inlineHelpText>
    <label>Cold Lead List</label>
    <type>Checkbox</type>
</CustomField>