force-app/main/default/objects/Lead/fields/Email_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Email_opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que recoge el consentimiento para recibir emails comerciales</description>
    <inlineHelpText>Acepto recibir comunicaciones de Cloud Coachers. Me puedo dar de baja en cualquier momento.</inlineHelpText>
    <label>Email opt-in</label>
    <type>Checkbox</type>
</CustomField>