force-app/main/default/objects/Lead/fields/General_Interest__c.field-meta.xml
<CustomField>
    <fullName>General_Interest__c</fullName>
    <label>General Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Formación para mi</fullName>
            </value>
            <value>
                <fullName>Formación para empleados</fullName>
            </value>
            <value>
                <fullName>Selección de profesionales formados</fullName>
            </value>
            <value>
                <fullName>Consultoría</fullName>
            </value>
            <value>
                <fullName>Quiero trabajar con vosotros</fullName>
            </value>
            <value>
                <fullName>In-company training</fullName>
            </value>
            <value>
                <fullName>Training for myself</fullName>
            </value>
            <value>
                <fullName>Certified professionals for my team</fullName>
            </value>
            <value>
                <fullName>Consultancy services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>