force-app/main/default/objects/Lead/fields/Training_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Training_of_Interest__c</fullName>
    <label>Training of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Training_of_Interest</valueSetName>
    </valueSet>
</CustomField>