force-app/main/default/objects/Lead/fields/Unqualify_reason__c.field-meta.xml
<CustomField>
    <fullName>Unqualify_reason__c</fullName>
    <label>Unqualify reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Wrong email</fullName>
            </value>
            <value>
                <fullName>Wrong phone</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>