force-app/main/default/objects/Lead/listViews/BasicQueueAmazon_Lead.listView-meta.xml
<ListView>
    <fullName>BasicQueueAmazon_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>BasicQueueAmazon</label>
    <queue>BasicQueueAmazon</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>