force-app/main/default/objects/Lead/listViews/Queue_B2B_Lead.listView-meta.xml
<ListView>
    <fullName>Queue_B2B_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Queue - B2B</label>
    <queue>Queue_B2B</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>