force-app/main/default/objects/Lead/listViews/Recruiting_Lead.listView-meta.xml
<ListView>
    <fullName>Recruiting_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Recruiting</label>
    <queue>Recruiting</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>